[gd_scene load_steps=2 format=2]

[ext_resource path="res://project/utilities/StatusEffectHandler.gd" type="Script" id=1]

[node name="StatusEffectHandler" type="Node"]
script = ExtResource( 1 )

[node name="OnFireExtinguishTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="FireDamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DryTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="OnFireExtinguishTimer" to="." method="_on_OnFireExtinguishTimer_timeout"]
[connection signal="timeout" from="FireDamageTimer" to="." method="_on_FireDamageTimer_timeout"]
[connection signal="timeout" from="DryTimer" to="." method="_on_DryTimer_timeout"]
